--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   </head>
   <body>
     <h1>Team Boxless</h1>
-    <h1>Donate to save the boxes</h3>
+    <h3>Donate to save the boxes</h3>
+    <br><p>Boxes are getting away from people and a lot of you know it. So we decided to make a non-profit organization called Team Boxless.</p></br>
+    <br><p>Boxes are everyones favorite things. And a few people don't have it.</p></br>
+    <p>Donate to us to help everyone get boxes. And I know what you're thinking. Whats the use! EVeryone can make something with boxes.
+You need boxes for your everday life. For you personal use or your siblings. So help us to make the earth a boxful world!.</p>
   </body>
   <!-- Donate to help the boxes -->
 </html>  
