--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <body>
     <h1>Team Boxless</h1>
     <h3>Donate to save the boxes</h3>
-    <br><p>Boxes are getting away from people and a lot of you know it. So we decided to make a non-profit organization called Team Boxless.</p></br>
+    <hr>
+    <br><p><b>Boxes</b> are getting away from people and a lot of you know it. So we decided to make a non-profit organization called Team Boxless.</p></br>
       <hr>
     <br><p>Boxes are everyones favorite things. And a few people don't have it.</p></br>
       <hr>
-    <p>Donate to us to help everyone get boxes. And I know what you're thinking. Whats the use! EVeryone can make something with boxes.
+    <p><b>Donate</b> to us to help everyone get boxes. And I know what you're thinking. Whats the use! EVeryone can make something with boxes.
       <hr>
-<p>You need boxes for your everday life. For you personal use or your siblings. So help us to make the earth a boxful world!.</p>
+<p>You need boxes for your everday life.&nbsp For you personal use or your siblings. So help us to make the earth a <b>boxful</b> world!.</p>
+<p><br>Donate to <i>help</i> the <b><sub>boxes</sub></b></br></p>
   </body>
   <!-- Donate to help the boxes -->
 </html>  
