--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <hr>
     <br><p>Boxes are everyones favorite things. And a few people don't have it.</p></br>
       <hr>
-    <p><b>Donate</b> to us to help everyone get boxes. And I know what you're thinking. Whats the use! EVeryone can make something with boxes.
+    <p><b>Donate</b> to us to help everyone get boxes. And I know what you're thinking. Whats the use! Everyone can make something with boxes.</p>
       <hr>
 <p>You need boxes for your everday life.&nbsp For you personal use or your siblings. So help us to make the earth a <b>boxful</b> world!.</p>
 <p><br>Donate to <i>help</i> the <b><sub>boxes</sub></b></br></p>
