--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  
+  <!-- Everyone loves boxes. -->
   <head>
     <title>Team Boxless</title>
   </head>
@@ -10,9 +10,9 @@
     <hr>
     <br><p><b>Boxes</b> are getting away from people and a lot of you know it. So we decided to make a non-profit organization called Team Boxless.</p></br>
       <hr>
-    <br><p>Boxes are everyones favorite things. And a few people don't have it.</p></br>
+    <br><p><i><b><sub>Boxes</sub></b></i> are everyones favorite things. And a few people don't have it.</p></br>
       <hr>
-    <p><b>Donate</b> to us to help everyone get boxes. And I know what you're thinking. Whats the use! Everyone can make something with boxes.</p>
+    <p><b>Donate</b> to us to help everyone get boxes. And I know what you're <i>thinking</i>. Whats the <sub>use</sub>! Everyone can make something with boxes.</p>
       <hr>
 <p>You need boxes for your everday life.&nbsp For you personal use or your siblings. So help us to make the earth a <b>boxful</b> world!.</p>
 <p><br>Donate to <i>help</i> the <b><sub>boxes</sub></b></br></p>
