--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <h1>Team Boxless</h1>
     <h3>Donate to save the boxes</h3>
     <hr>
-    <br><p><b>Boxes</b> are getting away from people and a lot of you know it. So we decided to make a non-profit organization called Team Boxless.</p></br>
+    <br><p><b>Boxes</b> are getting away from people and a lot of you know it. So we decided to make a <ins>non-profit organization</ins> called <big><mark>Team Boxless</mark></big>.</p></br>
       <hr>
-    <br><p><i><b><sub>Boxes</sub></b></i> are everyones favorite things. And a few people don't have it.</p></br>
+    <br><p><i><b><sub>Boxes</sub></b></i> are everyones <b><sup>favorite</sup></b> things. And a <small><del>few</del>lots of people</small> don't have it.</p></br>
       <hr>
-    <p><b>Donate</b> to us to help everyone get boxes. And I know what you're <i>thinking</i>. Whats the <sub>use</sub>! Everyone can make something with boxes.</p>
+    <p><b><big>Donate</big></b> to us to <sup>help</sup> <ins>everyone</ins> get <small>boxes</small>. And I know what you're <i>thinking</i>. Whats the <sub>use</sub>! Everyone can make something with boxes.</p>
       <hr>
-<p>You need boxes for your everday life.&nbsp For you personal use or your siblings. So help us to make the earth a <b>boxful</b> world!.</p>
+<p>You need <mark>boxes</mark> for your everday life.&nbsp For you personal use or your siblings. So <del>help</del> save us to make the earth a <b>boxful</b> world!.</p>
 <p><br>Donate to <i>help</i> the <b><sub>boxes</sub></b></br></p>
   </body>
   <!-- Donate to help the boxes -->
