--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <hr>
     <p><b><big>Donate</big></b> to us to <sup>help</sup> <ins>everyone</ins> get <small>boxes</small>. And I know what you're <i>thinking</i>. Whats the <sub>use</sub>! Everyone can make something with boxes.</p>
       <hr>
-<p>You need <mark>boxes</mark> for your everday life.&nbsp For you personal use or your siblings. So <del>help</del> save us to make the earth a <b>boxful</b> world!.</p>
+<p>You need <mark>boxes</mark> for your everday life.&nbsp For you personal use or your siblings. So <del>help</del> donate to us to make the earth a <b>boxful</b> world!.</p>
 <p><br>Donate to <i>help</i> the <b><sub>boxes</sub></b></br></p>
   </body>
   <!-- Donate to help the boxes -->
