--- a/index.html
+++ b/index.html
@@ -61,6 +61,41 @@
   <dd>-Clients</dd>
   
 </dl>
+<h2>How much money we get in boxes</h2>
+<br><p>We donate all the money you give us</p></br>
+<br><p>The table shows how many months we've been available</p></br>
+<br><p>The money we keep from expense we use to improve our factory<p></br>
+<table border=2px bgcolor="black" height=150>
+  <tr bgcolor="grey">
+    <th height=10 width=75>month:</th>
+    <th height=10 width=75>January</th>
+    <th height=10 width=75>February</th>
+    <th height=10 width=75>March</th>
+    <th height=10 width=75>April</th>
+  </tr>  
+  <tr bgcolor="yellow">
+    <th>income:</th>
+    <td>1500$</td>
+    <td>1750$</td>
+    <td>1250$</td>
+    <td>900$</td>
+  </tr>
+  <tr bgcolor="red">
+    <th>donated</th>
+    <td>-1400$</td>
+    <td>-1600$</td>
+    <td>-1150$</td>
+    <td>-400$</td>
+  </tr>  
+  <tr bgcolor="green">
+    <th>savings:</th>
+    <td>100$</td>
+    <td>100$</td>
+    <td>100$</td>
+    <td>100$</td>
+  </tr>
+</table>  
+
   </body>
   <!-- Donate to help the boxes -->
 </html>  
