--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
     <th height=10 width=75>March</th>
     <th height=10 width=75>April</th>
   </tr>  
-  <tr bgcolor="yellow">
+  <tr bgcolor="yellow" allign=center>
     <th>income:</th>
     <td>1500$</td>
     <td>1750$</td>
     <td>1250$</td>
     <td>900$</td>
   </tr>
-  <tr bgcolor="red">
+  <tr bgcolor="red" allign=center>
     <th>donated</th>
     <td>-1400$</td>
     <td>-1600$</td>
     <td>-1150$</td>
     <td>-400$</td>
   </tr>  
-  <tr bgcolor="green">
+  <tr bgcolor="green" allign=center>
     <th>savings:</th>
     <td>100$</td>
     <td>100$</td>
