--- a/index.html
+++ b/index.html
@@ -95,8 +95,23 @@
     <td>100$</td>
   </tr>
 </table>  
-<video controls>
-  <source src="cardboard_boxes.mp4">
-</video>
+<button name="box" type="button">
+  Im a box button
+</button>  
+<button name="boxes_button" type="boxes" value="Boxes">
+  Boxes
+</button>
+<button name="Reset_button" type="reset" value="Reset">
+  Reset
+</button>
+<button disabled>
+ Click this to get infinite boxes
+</button> 
+<button autofocus>
+  #teamboxless
+</button>  
+<button onclick="alert('You need to donate!')">
+  Click this
+</button>  
  </body>
 </html>
